# jotr

./: Cargo.toml  README.md
src/: args.rs  delete.rs  edit.rs  index.rs  list.rs  main.rs  new.rs
