[package]
name = "jotr"
version = "0.1.0"
authors = ["Camden Cheek <camden@ccheek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = "3.0.0-beta.2"
directories = "3.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
anyhow = "1.0"
serde_json = "1.0"
prettytable-rs = "^0.8"
colored = "2"
regex = "1"
